fix image squishing

--- a/varbro.scss
+++ b/varbro.scss
@@ -18,51 +18,62 @@ $pink: #EB008B;
 {% endfor %}
 /* end demo fonts */
 
-figure, figcaption {
-    display: block;
-    background: transparent;
-    margin: 1rem auto;
-    padding: 0;
-    border: 0;
-    text-align: left;
-}
-
-.content-filters h3 a {
-    padding-left: 0;
-    &::before {
-        display: none;
+#varbro-site {
+    
+    figure, figcaption {
+        display: block;
+        background: transparent;
+        margin: 1rem auto;
+        padding: 0;
+        border: 0;
+        text-align: left;
     }
-}
-
-.content-filters ul ul {
-    margin-bottom: 0;
-}
-
-.content-filters a {
-    text-decoration: none;
-}
-
-.content-main-full-height {
-    min-height: calc(100vh - 5.625rem);
-}
-
-.foundry-color {
-    color: #000000;
-}
-
-.header-foundry {
-    background-color: #000000;
-}
-
-
-.header-foundry ul {
-    margin-left: 0.5rem;
-}
-
-@media screen and (min-width: 56.25rem) {
+    
+    .content-filters h3 a {
+        padding-left: 0;
+        &::before {
+            display: none;
+        }
+    }
+    
+    .content-filters ul ul {
+        margin-bottom: 0;
+    }
+    
+    .content-filters a {
+        text-decoration: none;
+    }
+    
+    .content-main-full-height {
+        min-height: calc(100vh - 5.625rem);
+    }
+    
+    .foundry-color {
+        color: #000000;
+    }
+    
+    .header-foundry {
+        background-color: #000000;
+    }
+    
+    
     .header-foundry ul {
-        margin-left: 2.625rem;
+        margin-left: 0.5rem;
     }
+    
+    .article-news .section-article {
+        img {
+            width: 100% !important;
+            height: auto !important;
+        }
+    }
+    
+    @media screen and (min-width: 56.25rem) {
+        .header-foundry ul {
+            margin-left: 2.625rem;
+        }
+    }
+    
 }
 
 @import "playground";
